[project]
name = "vbd-indexer"
version = "0.1.0"
description = "VBD event indexer"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "eth-abi (>=5.2.0,<6.0.0)",
    "eth-utils (>=5.3.1,<6.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fire (>=0.7.1,<0.8.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "vbd_indexer", from = "src" }]

[tool.poetry.scripts]
vbd-indexer = "vbd_indexer.app:main"
